Reworked user interface to avoid having so many buttons - changed the code for the conversions to accomodate the new drop down box. Also made adjustments to some constraints - there are still some problem areas, but everything seems to display fine in the emulator.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
         <item>Gallon</item>
         <item>5-Gallon</item>
     </string-array>
+    <string-array name ="convert_to">
+        <item>Sample</item>
+        <item>Quart</item>
+        <item>Gallon</item>
+        <item>5-Gallon</item>
+    </string-array>
 </resources>
